<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="com.hj.scientificcalulator.MainActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_gravity="start|fill_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_arrow_back_ios_new_24"
                app:iconTint="@color/CambridgeBlue"
                android:backgroundTint="@color/CambridgeBlue"
                android:onClick="@{(v) -> view.onClick(v)}"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_bin"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_gravity="end|fill_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_delete_24"
                app:iconTint="@color/CambridgeBlue"
                android:backgroundTint="@color/CambridgeBlue"
                android:onClick="@{(v) -> view.onClick(v)}"
                />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="end|center_vertical|bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_expression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@={view.expression}"
                android:textColor="@color/DeepGreen"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@={view.result}"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_AC"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_open_parenthesis"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_open_parenthesis"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_close_parenthesis"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_close_parenthesis"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_divide"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_7"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_8"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_9"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_multiply"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_4"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_5"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_6"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_minus"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_1"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_2"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_3"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_plus"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_0"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_point"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:backgroundTint="@color/DeepGreen"
            android:onClick="@{(v) -> view.onClick(v)}"
            android:text="@string/txt_point"
            android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/DeepGreen"
                android:onClick="@{(v) -> view.onClick(v)}"
                app:icon="@drawable/backspace"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="#FFFFFF" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="@color/CambridgeBlue"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:text="@string/txt_equal"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</layout>